[package]
name = "rssh-win"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
bincode = "1.3.3"
bincode_derive = "2.0.0-rc.3"
directories = "5.0.1"
eframe = "0.29.0"
env_logger = "0.11.5"
regex = "1.11.0"
rfd = "0.15.0"
serde = { version = "1.0.210", features = ["derive"] }
ssh2 = { version = "0.9.4", features = ["vendored-openssl", "openssl-on-win32"] }
